# mil_streamlit

./: .env.full.example  .env.minimal.example  .env.publish.example  .gitattributes  .gitignore  .gitlab-ci.yml  APPROVED_LIBRARIES.md  ARCHITECTURE.md  CHRONICLE.md  CHRONICLE_POLICY.md  CJI_Pulse_90Day_Plan_v5.docx  CLAUDE.md  Dockerfile  Dockerfile.streamlit  GETTING_STARTED.md  HANDOVER.md  MIL9_DEPLOYMENT_GUIDE.md  Makefile  PRIVATE_PATHS.md  README.md  RUNBOOK.md  bootstrap.sh  docker  docker-compose.override.yml  docker-compose.yml  eval_enrichment.py  mil_command_app.py  notes.txt  requirements.txt  run_daily.py  run_teacher.py
cerno/: .gitignore  .gitlab-ci.yml  Makefile  README.md  SCAFFOLDING.md  STATE.md  pyproject.toml  requirements.txt
cerno/docs/: CONVENTIONS.md
cerno/scripts/: doctor.py
cerno/tests/: conftest.py  test_db.py  test_io.py  test_lineage.py  test_manifest.py  test_memory_files.py  test_run_id.py  test_safety.py  test_settings.py
pulse/: __init__.py  pyproject.toml  taxonomy.py
pulse/adapters/: __init__.py  base.py  real_bank.py  taq.py
pulse/analytics/: __init__.py  cause.py
pulse/audit/: AUDIT_BUNDLE_EXAMPLE.md  AUDIT_QUERY_SPEC.md  __init__.py  bundle.py
pulse/contracts/: BANK_POLICY_SCHEMA.md  __init__.py  bank_policy.yaml  journey_taxonomy.yaml  real_bank_contract.yaml  taq_contract.yaml  taq_op_code_map.csv  taq_taxonomy.yaml  validate_bank_policy.py
pulse/convergence/: CONVERGENCE_DESIGN.md  __init__.py  fairness.py  methods.yaml
pulse/decision/: __init__.py  chronicle.py  lineage.py  score_findings.py  synthetic_deployment.yaml
pulse/decision_packs/: HYPOTHESIS_SCHEMA.md  METADATA_SCHEMA.md  REGISTRY.md  __init__.py  hypothesis_schema.yaml  metadata_schema.yaml  validate.py  validate_hypothesis.py
pulse/detection/: __init__.py  detect.py  frictionbench_run.py  methods.py
pulse/diagnosis/: DIAGNOSIS_DESIGN.md  RUBRIC.md  __init__.py  rubric.yaml  score.py
pulse/docs/: ma_s_contract.md
pulse/frictionbench/: SPEC.md  __init__.py
pulse/lineage/: LINEAGE_DESIGN.md  __init__.py  canonical.py  chain.py  schema.yaml  verifier.py  verifier_cli.py
pulse/pipeline/: __init__.py  detect_sessions.py  run.py  sessionise.py
pulse/risk/: RISK_DESIGN.md  RUBRIC.md  __init__.py  regulatory_taxonomy.yaml  rubric.yaml  score.py
pulse/scenarios/: __init__.py
pulse/schema/: __init__.py  canonical_schema.yaml  validate.py
pulse/seq/: README.md  __init__.py  pipeline.py  preflight.py  transitions.py
pulse/serving/: __init__.py  api.py  journey_mart.py  marts.py  read.py  run_history.py
pulse/synthesis/: SYNTHESIS_DESIGN.md  __init__.py  base.py
pulse/synthetic/: __init__.py  generate_ma_d.py
pulse/tests/: conftest.py  test_agentic_ai_placement.py  test_analytics_cause.py  test_audit_bundle.py  test_bank_policy_validate.py  test_chronicle_candidates.py  test_chronicle_validate.py  test_decision_lineage.py  test_decision_pack_hypothesis.py  test_decision_pack_metadata.py  test_decisions.py  test_detect_sessions.py  test_detection.py  (+31 more)
(+742 files in other folders)
