[project]
name = "cerno"
version = "0.1.0"
description = "In-bank deployment of the Pulse friction-detection engine"
requires-python = ">=3.11,<3.12"

# These declare dependencies for documentation + IDE tooling.
# The bank edge node has the libs pre-installed; we do NOT pip install here.
dependencies = [
    "duckdb>=1.5.2",
    "pyarrow>=18.0",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "pyspark>=2.4",
    "pyodbc>=5.1",
    "pandas>=2.2",
    "scipy>=1.13",
    "PyYAML>=6.0",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
